@@ -55,6 +55,7 @@ FIX: status late on purchase orders
 FIX: ODT generation very slow
 FIX: amount in summary of report
 FIX: vat value when code contains number
+FIX: payment term label on PDF
 
 
 ***** ChangeLog for 13.0.0 compared to 12.0.0 *****
